--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,16 @@
 <html>
   <head>
     <title>Word Guessing-Game</title>
+    
+      <!-- Bootstrap -->
+      <link href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.4/cyborg/bootstrap.min.css"
+            rel="stylesheet">
+
+
   </head>
   <body>
     <p><strong>Word Guessing-Game</strong></p>
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   </body>
 </html>
