--- a/templates/index.html
+++ b/templates/index.html
@@ -2,16 +2,41 @@
 <html>
   <head>
     <title>Word Guessing-Game</title>
-    
+
       <!-- Bootstrap -->
       <link href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.4/cyborg/bootstrap.min.css"
             rel="stylesheet">
+      <!-- Stylesheet -->
+        <link rel="stylesheet" href="/static/css/styles.css">      
 
 
   </head>
   <body>
     <p><strong>Word Guessing-Game</strong></p>
+      <div class="container-top">
+    
+        <!--Select Difficulty -->
+        <form action="/select-difficulty">
+            Difficulty level:
+            <select name="difficulty">
+                <option value=1>1</option>
+                <option value=2>2</option>
+                <option value=3>3</option>
+                <option value=4>4</option>
+                <option value=5>5</option>
+                <option value=6>6</option>
+                <option value=7>7</option>
+                <option value=8>8</option>
+                <option value=9>9</option>
+                <option value=10>10</option>
+             </select>
+             <input type="submit" value="enter">
+         </form>
+        </div>
+        <div>
+
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+
   </body>
 </html>
