added logic to server to handle letter checking

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,15 +11,21 @@
 
 
   </head>
-  <body>
-    <p><strong>Word Guessing-Game</strong></p>
+   <body>
+        <div class="container">
+            <h2><strong>Word Guessing-Game</strong></h2>
 
         <!--Show word spaces -->
 
 
         <!-- Show number of incorrect guesses left-->
         <div class="container">
-            <h6>You have <span id="guesses-left"></span> guesses left.</h6>
+            <h6>You have <span id="guesses-left"></span> incorrect guesses left.</h6>
+        </div>
+        <br>
+        <!-- Show all letters guessed -->
+        <div class="container">
+            <h6>You've already guessed the following: <span id="letters-guessed"></span>.</h6>
         </div>
         <br>
 
@@ -50,15 +56,23 @@
         <!-- Enter Letter -->
         <div class="container">
             <form action="/check-letter">
-                Guess a letter: <input type="text" name="guessed-letter">
+                Guess a letter: <input type="text" name="guessed-letter" maxlength="1" pattern="[A-Za-z]" size="2" autocomplete="off">
                 <input type="submit" value="Enter">
-
-
+            </form>
+        </div>
+        <br>
+        <!-- Enter word -->
+        <div class="container">
+            <form action="/check-word">
+                Guess word: <input type="text" name="guessed-word" pattern="[A-Za-z]" size="10" autocomplete="off">
+                <input type="submit" value="Enter">
+            </form>
         </div>
 
 
     <!--javascript -->
     <script src="/static/js/game.js"></script>
+    
     <!-- jquery script -->
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
