working on checking for winner and loser; all else works

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
 {% block main %}
         <div class="container">
             <h2><strong>Word Guessing-Game</strong></h2>
+        </div>
 
               <!--Select Difficulty -->
       <div class="container">
