added styling, including backgroung color and font type

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,3 +1,26 @@
 body {
-  background-color: lightblue;
+  background-color: #fcfeff;
+  font-family: "monospace";
+}
+
+.button {
+    display: block;
+    width: 115px;
+    height: 25px;
+    background: #4E9CAF;
+    padding: 10px;
+    text-align: center;
+    border-radius: 5px;
+    color: white;
+    font-weight: bold;
+}
+
+#guesses-left { 
+  color: red;
+}
+
+.content {
+  font: "monospace";
+  max-width: 500px;
+  margin: auto;
 }
