--- a/templates/play_again.html
+++ b/templates/play_again.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %} 
 
+
 {% block main %}
         <div class="container">
-            <!-- <form>  -->
-<!--               <action="/play-again" method='POST'>
- -->            {{message}} Do you want to play again?
-            <a type="button" id="difficulty" name="play-again" value="yes!" href='/'>some text</a>
-          <!-- </form> -->
+
+            {{message}} Do you want to play again?
+            <a class="button" name="play-again" href='/'>Yes!</a>
+
         </div>
 
 
