--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,22 @@
 {% extends "base.html" %} 
 
 {% block main %}
-        <div class="container">
-            <h2><strong>Word Guessing-Game</strong></h2>
+        <div class="jumbotron">
+          <h1>Guessing Game</h1>      
+          <p>Can you guess the secret word?</p>
         </div>
 
-              <!--Select Difficulty -->
-      <div class="container">
+        <div class="container">
+            <title><strong>Guessing-Game</strong></title>
+        </div>
+
+        <!-- Instructs player to select a difficulty to start game -->
+        <div class="container">
+            <h5>To play, please select a difficulty!</h5>
+        </div>
+
+        <!--Select Difficulty -->
+        <div class="container">
         <form action="/start-game">
             Difficulty level:
             <select id="difficulty" name="select-difficulty">
@@ -25,4 +35,5 @@
          </form>
         </div>
         <br>
+
 {% endblock %}
