--- a/templates/play_again.html
+++ b/templates/play_again.html
@@ -1,14 +1,17 @@
 {% extends "base.html" %} 
 
+{% block title %}Guessing-Game{% endblock %}
 
 {% block main %}
-        <div class="container">
+    <br>
+    <!-- Displays winner/loser message and asks to play again -->
+    <div class="container">
 
-            {{message}} The word was: <b>{{session['word']}}</b>. 
-            Do you want to play again?
-            <a class="button" name="play-again" href='/'>Yes!</a>
+        {{message}} The word was:<b>{{session['word']}}</b>. 
+        Do you want to play again? 
+        <a class="button" name="play-again" href='/'>Yes!</a>
 
-        </div>
+    </div>
 
 
 {% endblock %}
