--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>{% block title %}GUESSING GAME{% endblock %}</title>
+    <title>{% block title %}Guessing-Game{% endblock %}</title>
 
     <!-- Helps browser control dimensions and scaling -->
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
@@ -9,7 +9,7 @@
       <!-- Bootstrap stylesheet -->
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <!-- Link to Stylesheet -->
-        <link rel="stylesheet" href="/static/css/styles.css">
+      <link rel="stylesheet" href="/static/css/styles.css">
 
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
