removed helper function to get rid of redundency

--- a/templates/play_again.html
+++ b/templates/play_again.html
@@ -15,7 +15,7 @@
 
     <!-- Give stats on game before player selects-->
         <div class="container">
-            <h4> There have been <b>{{num_win_at_diff}}</b> player(s) who won at difficulty <b>level {{session['difficulty']}}</b>.
+            <h4> There have been <b>{{num_win_at_diff}}</b> player(s) who have won at difficulty <b>level {{session['difficulty']}}</b>.
             </h4>
         </div>
 
